Fixed experience section alignment

--- a/src/components/Experience/experiencee.css
+++ b/src/components/Experience/experiencee.css
@@ -39,7 +39,7 @@
 /* Experience Item */
 .experience-item {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: flex-start;
   margin-bottom: 50px;
   position: relative;
@@ -61,7 +61,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 15%;
+  width: 0;
   position: relative;
   z-index: 2;
 }
